// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main renders correctly 1`] = `
.c1 {
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  width: 100%;
}

.c0 {
  position: relative;
}

<main
  className="c0"
>
  <div
    className="c1"
    style={
      Object {
        "filter": "blur(0.75rem)",
      }
    }
  >
    0
  </div>
  <div>
    foo
  </div>
</main>
`;

exports[`Main renders correctly 2`] = `
.c1 {
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  width: 100%;
}

.c0 {
  position: relative;
  -webkit-filter: blur(0.25rem);
  filter: blur(0.25rem);
}

<main
  className="c0"
>
  <div
    className="c1"
    style={
      Object {
        "filter": "blur(0.75rem)",
      }
    }
  >
    0
  </div>
  <div>
    foo
  </div>
</main>
`;
